--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "live-server": "^1.2.1"
+  },
+  "engines": {
+    "npm": "6.14.15",
+    "node": "v14.18.0"
   }
 }
