--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A clone of the popular web appilcation WORDLE.",
   "main": "index.html",
   "scripts": {
+    "start": "live-server build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jack Glazer",
